# Project-Impact-ENV-S4

./: .gitignore  Dockerfile  README.md  agent.py  docker-compose.yml  extract_statement.py  index.html  main.py  pyproject.toml  response.json
results/: summary.json
results/2023/: 00020_Cones_Concept_Neurons_in_Diffusion_Models_for_Customized_Generation.json  00032_Learning-Rate-Free_Learning_by_D-Adaptation.json  00042_Learning_GFlowNets_From_Partial_Episodes_For_Improved_Convergence_And_Stability.json  00059_Efficient_Self-supervised_Learning_with_Contextualized_Target_Representations_for_Vision_Speech_and_Language.json  00108_ProtST_Multi-Modality_Learning_of_Protein_Sequences_and_Biomedical_Texts.json  00237_Fundamental_Limits_of_Two-layer_Autoencoders_and_Achieving_Them_with_Gradient_Methods.json  00249_Practical_and_Matching_Gradient_Variance_Bounds_for_Black-Box_Variational_Bayesian_Inference.json  00308_Brauers_Group_Equivariant_Neural_Networks.json  00575_AdaptDiffuser_Diffusion_Models_as_Adaptive_Self-evolving_Planners.json  00636_Delayed_Feedback_in_Kernel_Bandits.json  00725_Random_Classification_Noise_does_not_defeat_All_Convex_Potential_Boosters_Irrespective_of_Model_Choice.json  00730_Gaussian_Process_Priors_for_Systems_of_Linear_Partial_Differential_Equations_with_Constant_Coefficients.json  00740_Marginalization_is_not_Marginal_No_Bad_VAE_Local_Minima_when_Learning_Optimal_Sparse_Representations.json  00877_Reparameterized_Policy_Learning_for_Multimodal_Trajectory_Optimization.json  00973_AdaBoost_is_not_an_Optimal_Weak_to_Strong_Learner.json  (+140 more)
(+254 files in other folders)
