[project]
name = "projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.1",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "matplotlib>=3.10.8",
    "openreview-downloader>=0.1.4",
    "openreview-py>=1.59.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.1",
    "uvicorn>=0.42.0",
]
